@@ -344,6 +344,9 @@ BUGFIXES:
   ZOOKEEPER-2500: Fix compilation warnings for CliException classes
   (Abraham Fine via phunt)
 
+  ZOOKEEPER-2074: Incorrect exit codes for "./zkCli.sh cmd arg"
+  (Abraham Fine via phunt)
+
 IMPROVEMENTS:
   ZOOKEEPER-2024 Major throughput improvement with mixed workloads (Kfir Lev-Ari via shralex)
 
